pkgdata_DATA = asm.decarc \
		autoconf.decarc \
		awk.decarc \
		cookbook.decarc \
		changelog.decarc \
		cmake.decarc \
		c.decarc \
		css.decarc \
		default.decarc \
		elisp.decarc \
		forth.decarc \
		email.decarc \
		go.decarc \
		groff.decarc \
		guile.decarc \
		html.decarc \
		java.decarc \
		javascript.decarc \
		json.decarc \
		lua.decarc \
		makefile.decarc \
		man.decarc \
		markdown.decarc \
		decahelp.decarc \
		decarc.decarc \
		nftables.decarc \
		objc.decarc \
		ocaml.decarc \
		patch.decarc \
		perl.decarc \
		php.decarc \
		po.decarc \
		python.decarc \
		ruby.decarc \
		rust.decarc \
		sh.decarc \
		sql.decarc \
		tcl.decarc \
		tex.decarc \
		texinfo.decarc \
		xml.decarc \
		yaml.decarc \
		z80.decarc

nobase_pkgdata_DATA = \
		extra/ada.decarc \
		extra/fortran.decarc \
		extra/haskell.decarc \
		extra/povray.decarc \
		extra/spec.decarc

EXTRA_DIST = $(pkgdata_DATA) $(nobase_pkgdata_DATA)
